<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/beauty_shades">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_option">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/section_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/opsr"
                    android:text="@string/hey_there"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/samsungsans_regular"
                    android:text="@string/email_txt"
                    android:textColor="#E6E6E6"
                    android:textSize="17sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/email"
                    android:fontFamily="@font/opsl"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/textview_bg"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textColorHint="#D9D9D9"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pass_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/samsungsans_regular"
                    android:text="@string/password_txt"
                    android:layout_marginBottom="10dp"
                    android:textColor="#E6E6E6"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/password_icon"
                    android:fontFamily="@font/opsl"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textColorHint="#D9D9D9"
                    android:background="@drawable/textview_bg"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgot_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:padding="1dp"
                    android:fontFamily="@font/opsl"
                    android:text="@string/forgot_password"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/getStarted_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="60dp"
                    android:onClick="openUsers"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_letsgo"
                    android:fontFamily="@font/opensans_light"
                    android:text="@string/sign_up"
                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opsl"
                    android:text="@string/line"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/samsungsans_regular"
                    android:text="@string/connect_with"
                    android:textColor="#D9D9D9"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opsl"
                    android:text="@string/line"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/googleSignIn"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/facebook_bg"
                    android:text="@string/google"
                    android:fontFamily="@font/samsungsans_regular"
                    android:textColor="#fff"
                    android:drawableEnd="@drawable/icons_google_logo"
                    android:paddingEnd="35dp"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    />
                <Button
                    android:id="@+id/face_book"
                    android:layout_width="170dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/facebook"
                    android:fontFamily="@font/samsungsans_regular"
                    android:textColor="#fff"
                    android:drawableEnd="@drawable/icons_facebook"
                    android:paddingEnd="35dp"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>