<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textStyle="normal"
                android:textSize="27sp"
                android:layout_marginTop="-50dp"
                android:fontFamily="@font/montserratmedium"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="meda_chatjs.json"
                app:lottie_loop="true"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="join_chat.json"
                app:lottie_loop="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="-30dp"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textSize="17sp"
                android:fontFamily="@font/montserratmedium"
                android:textColor="#666"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="openLogin"
                android:background="@drawable/btn_letsgo"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/lets_go"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:fontFamily="@font/montserratmedium"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>